--- a/templates/security/usuarios/list.html
+++ b/templates/security/usuarios/list.html
@@ -1,9 +1,5 @@
 {% extends 'base.html' %}
-<title>{% block title %}{{title}}{% endblock %}</title>
-{% block content %}
-    {% load static %}
-    <section class="dark:bg-principal mt-2">ends 'base.html' %}
-<title>{% block title %}{{ title }}{% endblock %}</title>
+{% block title %}{{ title }}{% endblock %}
 {% block content %}
     {% load static %}
     {% include 'fragments/messages.html' %}
